# hl-imagenet

./: .gitignore  README.md  pyproject.toml
docs/: README.md  anycode_finding.md  blog.md  design.md  experiment_report.md  lessons.md  phase2_eda.md  phase2_local_vision.md  phase3_plan.md  result1.md  theory.md
hlinet/: README.md  __init__.py  registry.py  types.py
logs/: 2026-05-09_session1_reasoning.md  README.md  eval_iter3_2026-05-09_01-59.json  eval_iter4_2026-05-09_02-04.json  eval_iter5_2026-05-09_02-05.json  eval_iter6_2026-05-09_02-05.json  eval_phase1_2026-05-09_02-13.json  eval_phase1_2026-05-09_02-14.json  eval_phase1_2026-05-09_02-15.json  eval_phase1_2026-05-09_02-17.json  eval_phase1_2026-05-09_02-18.json  eval_phase1_2026-05-09_02-19.json  eval_phase1_2026-05-09_02-20.json  eval_phase1_2026-05-09_02-25.json  eval_phase1_2026-05-09_02-26-36.json  eval_phase1_2026-05-09_02-27-23.json  eval_phase1_2026-05-09_02-31-05.md  eval_phase1_2026-05-09_02-32-54.json  eval_phase1_2026-05-09_02-32-54.md  eval_phase1_2026-05-09_02-33-48.json  eval_phase1_2026-05-09_02-34-41.json  eval_phase1_2026-05-09_02-34-41.md  eval_phase1_2026-05-09_02-35-06.json  eval_phase1_2026-05-09_02-43-11.json  eval_phase1_2026-05-09_02-43-39.json  eval_phase1_2026-05-09_02-45-16.md  eval_phase1_2026-05-09_02-47-53.json  eval_phase1_2026-05-09_02-48-55.md  eval_phase1_2026-05-09_02-53-22.md  eval_phase1_2026-05-09_02-55-12.json  eval_phase1_2026-05-09_02-55-35.json  eval_phase1_2026-05-09_02-56-42.json  eval_phase1_2026-05-09_02-57-14.json  eval_phase1_2026-05-09_03-02-33.json  (+228 more)
(+2473 files in other folders)
