[project]
name = "hlinet"
version = "0.1.0"
description = "A self-growing symbolic visual algebra for ImageNet classification"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "networkx>=3.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
agent = ["anthropic>=0.30"]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hlinet*"]

[project.scripts]
hlinet-eval = "hlinet.eval.runner:main"
hlinet-agent = "hlinet.agent.loop:main"
hlinet-predict = "hlinet.classifier.predict:main"
